initial structure created

--- a/public/views/pages/index.html
+++ b/public/views/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-App="myApp">
   <head>
     <title>Main Page</title>
       <script src="vendors/angular.js"></script>
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="styling/styles.css">
   </head>
   <body>
-    <p>Yay, if you can see this, all is working!!</p>
+    <p>Index Page</p>
+    <button type="button">Push Me!</button>
   </body>
 </html>
